temporary response to Dan's comments on ack, still waiting for the official BIDS ack

--- a/Resilience.tex
+++ b/Resilience.tex
@@ -761,8 +761,10 @@ and examine the use of asynchronous replication and hierarchical storage.
 \section{Acknowledgments}
 \katznote{anything else about funding sponsors to add?}
 The AMPLab is supported in part by NSF CISE Expeditions Award CCF-1139158, LBNL Award 7076018, and DARPA XData Award FA8750-12-2-0331, and gifts from Amazon Web Services, Google, SAP,  The Thomas and Stacey Siebel Foundation, Adatao, Adobe, Apple, Inc., Blue Goji, Bosch, C3Energy, Cisco, Cray, Cloudera, EMC, Ericsson, Facebook, Guavus, Huawei, Intel, Microsoft, NetApp, Pivotal, Samsung, Splunk, Virdata, VMware, and Yahoo!. \katznote{are all of these active supporters of work done in this paper?  If not, can we remove some of them? - not a big deal either way}
+\zhaonote{Unfortunately, all these sponsors have to be listed in the ack. }
 
 Work by Zhao is also supported by the Berkeley Institute for Data Science (BIDS), through funding from ... \katznote{just whatever is needed about your funding, probably Moore and Sloan...}
+\zhaonote{yes, I am waiting of the official BIDS ack. It has been a week since I ask them last time. should be ready soon.}
 
 Work by Katz was supported by the National
 Science Foundation while working at the Foundation.  Any opinion, finding, and
