add BIDS mark for M Franklin

--- a/Resilience.tex
+++ b/Resilience.tex
@@ -66,7 +66,7 @@
 \end{tabular}
 \\
 \begin{tabular}{ccc}
-{Ian Foster\textsuperscript{+}} & {Michael J. Franklin\textsuperscript{*}} & {Ion Stoica\textsuperscript{*}}
+{Ian Foster\textsuperscript{+}} & {Michael J. Franklin\textsuperscript{*,\#}} & {Ion Stoica\textsuperscript{*}}
 %Name Institution
 \end{tabular}
 \and % use '\and' if you need 'another row' of author names
